--- a/package.json
+++ b/package.json
@@ -9,19 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.121.2",
+    "@react-three/fiber": "^9.0.0-alpha.8",
+    "@tabler/icons-react": "^3.31.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.18.1",
+    "mini-svg-data-uri": "^1.4.4",
+    "next": "15.1.5",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.5"
+    "react-icons": "^5.4.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.172.0",
+    "three-globe": "^2.40.4"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@eslint/js": "^9.18.0",
     "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/react": "^19.0.7",
     "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^9",
+    "@types/react-lottie": "^1.2.10",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.18.0",
     "eslint-config-next": "15.1.5",
-    "@eslint/eslintrc": "^3"
+    "eslint-define-config": "^2.1.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.20.0"
   }
 }
