--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-three/drei": "^9.121.2",
     "@react-three/fiber": "^9.0.0-alpha.8",
     "@tabler/icons-react": "^3.31.0",
     "clsx": "^2.1.1",
@@ -32,6 +31,7 @@
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19",
     "@types/react-lottie": "^1.2.10",
+    "@types/three": "^0.174.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.18.0",
     "eslint-config-next": "15.1.5",
